# thiran-api

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: pull_request.yml
src/: app.py  main.py
src/tests/: test_login_and_signup.py
