[tool.poetry]
name = "thiran-api"
version = "0.1.0"
description = ""
authors = ["VimalAnnamalai <iamvimalannamalai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
