[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["VimalAnnamalai <iamvimalannamalai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pytest = "^8.3.2"
flake8 = "^7.1.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
